fix: align index page on mobile & tablet

--- a/src/styles/modules/Index.module.scss
+++ b/src/styles/modules/Index.module.scss
@@ -58,7 +58,15 @@
 	@include breakpoint-range($from: mobile) {
 		background: var(--backgroundColor);
 		border-radius: var(--borderRadius);
-		min-height: 100vh;
+		min-height: 100%;
+		width: 100%;
+	}
+
+	@include breakpoint-range($from: mobile) {
+		bottom: 0;
+		left: 0;
+		background: var(--backgroundColor);
+		min-height: 80%;
 		width: 100%;
 	}
 
@@ -66,7 +74,7 @@
 		bottom: 20%;
 		left: 12%;
 		background: transparent;
-		min-height: 10vh;
+		min-height: 10%;
 		width: fit-content;
 	}
 }
@@ -81,12 +89,16 @@
 	margin: auto;
 
 	@include breakpoint-range($from: mobile, $to: desktopSmall) {
-		canvas {
+	 & #hero-model {
 			display: none;
 		}
 	}
 
 	@include breakpoint-range($from: desktopSmall) {
+		& #hero-model {
+			display: block;
+		}
+
 		padding: 0.5rem 3rem;
 		flex-direction: row;
 	}
